src/tools/components/product-images/product-images.module.css
.imagesSection {
  display: flex;
}
.imagesList {
  list-style: none;
}

.imagesListItem {
  width: 79px;
}

.imagesListItem:not(:last-child) {
  margin-bottom: 40px;
}

.selectImage {
  display: block;
  width: 90px;
  aspect-ratio: 1;
  object-fit: contain;
  cursor: pointer;
  transition: all 250ms;
}

.selectImage:hover {
  transform: scale(1.1);
}

.selectedImage {
  width: 800px;
  height: 800px;
  object-fit: fill;
  margin-left: 10px;
  margin-right: 50px;
}

